Switched graph API to arbor.js, can still switch back and forth pretty easily
Send new edge messages in test idle too

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dracula"]
 	path = dracula
 	url = git@github.com:tinyogre/dracula.git
+[submodule "arbor"]
+	path = arbor
+	url = https://github.com/samizdatco/arbor.git
